# coq-cds4ltl

./: .gitignore  .travis.yml  CLAUDE.md  LICENSE.md  Makefile  README-axioms.md  README.md  README.org  _CoqProject  coq-cds4ltl.opam  coq-constructive-ltl.opam  default.nix  flake.nix  lefthook.yml  scott.org  shell.nix  theorems
.beads/export-state/: 5b9c2fe02fb5326b.json
.github/workflows/: coq-ci.yml
old/: CoStep.v  Ext.v
src/: Bases.v  Bool.v  Class.v  CoStep.v  CoSyntax.v  Denote.v  EquationalReasoning.v  Higher.v  Impl.v  LTL.v  LTLf.v  Machine.v  Match.v  Meta.v  MinBool.v  MinLTL.v  Model.v  Old.v  Same_set.v  Step.v  Stream.v  Syntax.v  Working.v
