opam-version: "2.0"
maintainer: "johnw@newartisans.com"

homepage: "https://github.com/jwiegley/coq-cds4ltl"
dev-repo: "git+https://github.com/jwiegley/coq-cds4ltl.git"
bug-reports: "https://github.com/jwiegley/coq-cds4ltl/issues"
license: "BSD-3-Clause"

synopsis: "A Calculational Deductive System for Linear Temporal Logic"
description: """
An axiomatic and denotational formalization of the theorems described by the
paper: A Calculational Deductive System for Linear Temporal Logic (CDS4LTL).
"""

build: [make "-j%{jobs}%" ]
install: [make "install"]
depends: [
  "coq" {(>= "8.14" & < "8.17~") | (= "dev")}
]

url {
  src: "https://github.com/jwiegley/coq-cds4ltl/archive/refs/tags/1.0.0.tar.gz"
  checksum: "sha256=d8a9fce1e20d0bd6e756957bf40c4deee1d83732c6c949a1dc5c290136ced60b"
}

tags: [
  "keyword: temporal logic"
  "category: Mathematics/Logic/Modal logic"
  "date: 2022-07-23"
  "logpath: CDS4LTL"
]
authors: [
  "John Wiegley"
]
