opam-version: "2.0"
maintainer: "johnw@newartisans.com"
version: "dev"

homepage: "https://github.com/jwiegley/constructive-ltl"
dev-repo: "git+https://github.com/jwiegley/constructive-ltl.git"
bug-reports: "https://github.com/jwiegley/constructive-ltl/issues"
license: "BSD-3-Clause"

synopsis: "An axiom-free formalization of category theory in Coq"
description: """
An axiom-free formalization of category theory in Coq for personal study and
practical work.
"""

build: [make "JOBS=%{jobs}%" ]
install: [make "install"]
depends: [
  "coq" {(>= "8.10" & < "8.16~") | (= "dev")}
]

tags: [
]
authors: [
  "John Wiegley"
]
